--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -7,8 +7,8 @@ main:
   - name: Home
     url: '#about'
     weight: 10
-  - name: Projects
-    url: '#projects'
+  - name: Research
+    url: '#research'
     weight: 20
   - name: Publications
     url: '#publications'
@@ -16,12 +16,18 @@ main:
   - name: Talks
     url: '#talks'
     weight: 40
+  - name: Projects
+    url: '#projects'
+    weight: 50
   - name: Experience
     url: '#experience'
-    weight: 50
+    weight: 60
+  - name: Teaching
+    url: '#teaching'
+    weight: 70
   - name: Service
     url: '#service'
-    weight: 60
+    weight: 80
   - name: CV
     url: 'uploads/resume.pdf'
-    weight: 70
+    weight: 90
